# finance-agent-v2

./: .gitignore  README.md  contract.yaml  pyproject.toml  run.sh  setup.sh
finance_agent/: __init__.py  custom_model.py  exceptions.py  get_agent.py  key_rotator.py  prompt.py  run_agent.py  tools.py
tests/: __init__.py  test_key_rotator.py  test_parse_html_page.py
